# kith

./: .example.env  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  justfile
src/: app.rs  config.rs  main.rs  tsh.rs  tui.rs
src/core/: mod.rs  tsh.rs
src/widgets/: confirmation_toggle.rs  connect_dialog.rs  database_list.rs  database_name_input.rs  dialog.rs  mod.rs  search_dialog.rs  styles.rs  user_list.rs
