[package]
name = "kith"
description = "A TUI for accessing Teleport databases"
version = "0.1.3"
authors = ["Vincent Desloover <vincent.desloover.dev@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
crossterm = "0.27.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
ratatui = "0.27.0"
